k8s/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: almost-automated-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: almost-automated-api-deployment
  template:
    metadata:
      labels:
        app: almost-automated-api-deployment
    spec:
      serviceAccountName: default
      containers:
        - name: almost-automated-api
          image: almost-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
