k8s/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: almost-automated-api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
